+ | Added main and Improved readability of *.hpp and *.cpp

--- a/CPP00/ex01/Makefile
+++ b/CPP00/ex01/Makefile
@@ -1,5 +1,7 @@
 
-SRCS = phonebook
+SRCS = PhoneBook Contact main
+
+INCLUDE = PhoneBook Contact 
 
 SRC = $(addsuffix .cpp, $(SRCS))
 OBJ = $(addsuffix .o, $(SRCS))
@@ -7,7 +9,7 @@ OBJ = $(addsuffix .o, $(SRCS))
 CC = c++
 CFLAGS = -Wall -Wextra -Werror -std=c++98
 
-NAME = phonebook
+NAME = PhoneBook
 
 all : $(NAME)
 
