--- a/CPP03/ex00/Makefile
+++ b/CPP03/ex00/Makefile
@@ -8,7 +8,7 @@ OBJS =  $(addprefix $(OBJ_DIR), $(addsuffix .o, $(FILES)))
 CC = c++
 CFLAGS = -Wall -Wextra -Werror -std=c++98 -IInclude
 
-NAME = AaaaandOPEN
+NAME = AaaaandOPEN!
 
 all : $(NAME)
 
