~-| Updated CPP03 and deleted CPP04 05 06 to restart it

--- a/CPP03/ex02/Makefile
+++ b/CPP03/ex02/Makefile
@@ -1,5 +1,5 @@
 
-FILES = main ClapTrap ScavTrap FragTrap DiamondTrap
+FILES = main ClapTrap ScavTrap FragTrap
 
 OBJ_DIR = obj/
 SRCS =  $(addsuffix .cpp, $(FILES))
