+ | Add finished  ex02

--- a/CPP05/ex02/Makefile
+++ b/CPP05/ex02/Makefile
@@ -1,5 +1,5 @@
 
-FILES = main Bureaucrat AForm PresidentialPardonForm RobotomyRequestForm
+FILES = main Bureaucrat AForm PresidentialPardonForm RobotomyRequestForm ShrubberyCreationForm
 
 OBJ_DIR = obj/
 SRCS =  $(addsuffix .cpp, $(FILES))
