~ | Updated executable's name

--- a/CPP05/ex02/Makefile
+++ b/CPP05/ex02/Makefile
@@ -8,7 +8,7 @@ OBJS =  $(addprefix $(OBJ_DIR), $(addsuffix .o, $(FILES)))
 CC = c++
 CFLAGS = -Wall -Wextra -Werror -std=c++98
 
-NAME = FormUpMaggots!
+NAME = NoYouNeedForm28BNot28C...
 
 all : $(NAME)
 
@@ -25,7 +25,7 @@ clean :
 	rm -rf $(OBJ_DIR)
 
 fclean : clean
-	rm -rf $(NAME)
+	rm -rf $(NAME) *_shrubbery
 
 re : fclean
 	make
