~ | removed function from main to put them all in BitcoinExchange Removed useless file and Updated Makefile

--- a/CPP09/ex00/Makefile
+++ b/CPP09/ex00/Makefile
@@ -1,5 +1,5 @@
 
-FILES = main 
+FILES = main BitcoinExchange
 
 OBJ_DIR = obj/
 SRCS =  $(addsuffix .cpp, $(FILES))
@@ -25,7 +25,7 @@ clean :
 	rm -rf $(OBJ_DIR)
 
 fclean : clean
-	rm -rf $(NAME)
+	rm -rf $(NAME) .gdb_history
 
 re : fclean
 	make
